# BaselineFootstepPlanner

./: .clang-format-common.sh  CMakeLists.txt  README.md  _config.yml  package.xml  robots.txt
.github/workflows/: ci-catkin.yaml  ci-colcon.yaml  ci-standalone.yaml  ci.yaml
config/: FootstepPlanner.yaml
doc/: CMakeLists.txt  Doxyfile.extra.in
dockerfiles/: docker-compose.windows.yml
dockerfiles/install/: i_dep.sh
doxygen/: FootstepDijkstraPathHeuristic_8h.html  FootstepDijkstraPathHeuristic_8h__incl.map  FootstepDijkstraPathHeuristic_8h__incl.md5  FootstepDijkstraPathHeuristic_8h_source.html  FootstepEnvConfigRos_8h.html  FootstepEnvConfigRos_8h__incl.map  FootstepEnvConfigRos_8h__incl.md5  FootstepEnvConfigRos_8h_source.html  FootstepEnv_8h.html  FootstepEnv_8h__dep__incl.map  FootstepEnv_8h__dep__incl.md5  FootstepEnv_8h__incl.map  FootstepEnv_8h__incl.md5  FootstepEnv_8h_source.html  FootstepPlanner_8h.html  FootstepPlanner_8h__incl.map  FootstepPlanner_8h__incl.md5  FootstepPlanner_8h_source.html  FootstepState_8h.html  FootstepState_8h__dep__incl.map  FootstepState_8h__dep__incl.md5  FootstepState_8h__incl.map  FootstepState_8h__incl.md5  FootstepState_8h_source.html  FootstepTypes_8h.html  FootstepTypes_8h__dep__incl.map  FootstepTypes_8h__dep__incl.md5  FootstepTypes_8h__incl.map  FootstepTypes_8h__incl.md5  FootstepTypes_8h_source.html  MathUtils_8h.html  MathUtils_8h__dep__incl.map  MathUtils_8h__dep__incl.md5  MathUtils_8h__incl.map  MathUtils_8h__incl.md5  MathUtils_8h_source.html  README_8md.html  annotated.html  classBFP_1_1FootstepDijkstraPathHeuristic-members.html  classBFP_1_1FootstepDijkstraPathHeuristic.html  (+90 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  (+30 more)
include/BaselineFootstepPlanner/: FootstepDijkstraPathHeuristic.h  FootstepEnv.h  FootstepEnvConfigRos.h  FootstepPlanner.h  FootstepState.h  FootstepTypes.h  MathUtils.h  console.h
launch/: footstep_planner.launch  footstep_planner.launch.py
msg/: Footstep2D.msg  FootstepSequence2D.msg  FootstepSequence2DStamped.msg
node/: CMakeLists.txt  FootstepEnvConfigRos.cpp  FootstepPlannerNode.cpp  FootstepPlannerNode.h
rviz/: FootstepPlanner.rviz
scripts/: FootstepPlannerRvizServer.py
src/: CMakeLists.txt  FootstepDijkstraPathHeuristic.cpp  FootstepEnv.cpp  FootstepEnvConfigRos.cpp  FootstepPlanner.cpp  FootstepState.cpp
tests/: CMakeLists.txt
tests/src/: TestFootstepPlanner.cpp
