<package format="3">
  <name>baseline_footstep_planner</name>
  <version>0.1.0</version>
  <description>
    Humanoid footstep planner based on baseline methods with graph search
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/baseline_footstep_planner</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <doc_depend>doxygen</doc_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
