if(NOT DEFINED USE_ROS2)
  find_package(GTest REQUIRED)
  include(GoogleTest)
  function(add_BFP_test NAME)
    add_executable(${NAME} src/${NAME}.cpp)
    target_link_libraries(${NAME} PUBLIC GTest::gtest BaselineFootstepPlanner)
    gtest_discover_tests(${NAME})
  endfunction()
else()
  find_package(ament_cmake_gtest REQUIRED)
  find_package(GTest REQUIRED)
  function(add_BFP_test NAME)
    ament_add_gtest(${NAME} src/${NAME}.cpp)
    target_link_libraries(${NAME} BaselineFootstepPlanner)
    install(TARGETS TestFootstepPlanner DESTINATION lib/${PROJECT_NAME})
  endfunction()
endif()

set(BaselineFootstepPlanner_gtest_list
  TestFootstepPlanner
  )

foreach(NAME IN LISTS BaselineFootstepPlanner_gtest_list)
  add_BFP_test(${NAME})
endforeach()
